Update index.html for Google Cloud

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -101,7 +101,7 @@
 <body>
 <header>
     <h1>Ryan's Expense Tracker</h1>
-    <p>Track your expenses easily. Powered by Spring Boot + Azure.</p>
+    <p>Track your expenses easily. Powered by Spring Boot + Google Cloud.</p>
 </header>
 
 <!-- Expense List -->
@@ -133,7 +133,7 @@
 </div>
 
 <footer>
-    © 2025 Ryan Hillman — Built with Spring Boot on Azure
+    © 2025 Ryan Hillman — Built with Spring Boot on Google Cloud
 </footer>
 
 <!-- Toast Container -->
